[gd_scene load_steps=7 format=3 uid="uid://cbg272e5gme3i"]

[ext_resource type="Script" path="res://script/sobre_a_cidade.gd" id="1_6e22r"]
[ext_resource type="Texture2D" uid="uid://dr6s1blso72yw" path="res://tudo/imagens/outros/sobre_a_cidade.jpeg" id="1_a2qef"]
[ext_resource type="Texture2D" uid="uid://c2wiqqgfcuw03" path="res://tudo/Botoes/botao.png" id="3_wdv41"]
[ext_resource type="Texture2D" uid="uid://bxytpcr1txv48" path="res://tudo/Botoes/botaoAoClicar.png" id="4_q5ha4"]
[ext_resource type="Texture2D" uid="uid://es4pidv528oc" path="res://tudo/Botoes/BotaoClique.png" id="5_u2uqo"]
[ext_resource type="FontFile" uid="uid://bqgsgpspvosqo" path="res://tudo/fonts/BRITANIC.TTF" id="6_bx4k6"]

[node name="sobre_a_cidade" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6e22r")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(175, 325)
scale = Vector2(0.359343, 0.471959)
texture = ExtResource("1_a2qef")

[node name="Label" type="Label" parent="Sprite2D"]
offset_left = -375.686
offset_top = -580.559
offset_right = 125.314
offset_bottom = -235.559
theme_override_fonts/font = ExtResource("6_bx4k6")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="botao1" type="TextureButton" parent="."]
offset_left = 101.0
offset_top = 587.0
offset_right = 324.0
offset_bottom = 665.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("3_wdv41")
texture_pressed = ExtResource("4_q5ha4")
texture_hover = ExtResource("5_u2uqo")

[node name="Label" type="Label" parent="botao1"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 217.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("6_bx4k6")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="botao1" to="." method="_on_botao_1_pressed"]
